--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* Custom Theme Variables */
+@import "./styles/themes.scss";
 
 /* PrimeNG */
 @import "../node_modules/primeng/resources/primeng.min.css";
@@ -16,32 +18,33 @@
 
 html,
 body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .container-fluid {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 
 .content-wrapper {
-    padding-top: 80px;
-    /* Adjust for fixed navbar */
-    flex-grow: 1;
+  padding-top: 80px;
+  /* Adjust for fixed navbar */
+  flex-grow: 1;
 }
 
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .pt-6-rem {
-    padding-top: 6rem;
+  padding-top: 6rem;
 }
